# 2026_Projects

./: README.md
automatedBackup/: README.md
docker/: README.md
remoteBoot/: README.md
website/: Cargo.toml  README.md  docker-compose.yml  main.rs
website/src/: cli.rs  config.rs  contact.rs  db.rs  errors.rs  main.rs  models.rs  routes.rs
