[package]
name = "crimson"
version = "1.0.0"
edition = "2021"

[dependencies]
axum = "0.7"
axum-client-ip = "0.6.0"
http = "1.0"
rand = "0.8"
serde_json = "1.0"
thiserror = "1"
tracing = "0.1"

chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "chrono"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
tower_governor = { version = "0.4.3", features = ["axum"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
validator = { version = "0.18", features = ["derive"] }

tower-http = { version = "0.5", features = [
    "limit",
    "set-header",
    "trace",
    "fs",
    "compression-gzip"
] }


